--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -1,16 +1,13 @@
-name: Tag and Publish
+name: Tag and Publish to NuGet
 
 on:
   workflow_dispatch:
     inputs:
-      publish:
-        description: 'Publish to NuGet'
+      publish_to_nuget:
+        description: 'Publish to NuGet (true/false)'
         required: true
         default: 'false'
-        type: choice
-        options:
-          - 'true'
-          - 'false'
+        type: boolean
 
 jobs:
   tag-and-publish:
@@ -24,69 +21,59 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: '6.0.x'
         
-    - name: Get version from project
-      id: get_version
+    - name: Extract version from project file
+      id: extract_version
+      run: |
+        $version = Select-Xml -Path "src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj" -XPath "//Version" | Select-Object -ExpandProperty Node | Select-Object -ExpandProperty InnerText
+        echo "VERSION=$version" >> $env:GITHUB_OUTPUT
+        echo "Extracted version: $version"
       shell: pwsh
+      
+    - name: Create Git tag
       run: |
-        $xml = [Xml] (Get-Content "src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.CI.csproj")
-        $version = $xml.Project.PropertyGroup.Version
-        echo "version=$version" >> $env:GITHUB_OUTPUT
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git tag v${{ steps.extract_version.outputs.VERSION }}
+        git push origin v${{ steps.extract_version.outputs.VERSION }}
         
-    - name: Create tag
-      uses: actions/github-script@v7
+    - name: Restore dependencies
+      run: dotnet restore src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
+      
+    - name: Build (Full DAQmx Support)
+      run: dotnet build src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj --configuration Release --no-restore
+      
+    - name: Create NuGet package (with DAQmx support)
+      run: dotnet pack src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj --configuration Release --no-build --output ./artifacts
+      
+    - name: Upload package artifacts
+      uses: actions/upload-artifact@v4
       with:
-        script: |
-          const version = '${{ steps.get_version.outputs.version }}'
-          const tagName = `v${version}`
-          
-          // Check if tag already exists
-          try {
-            const { data: existingTag } = await github.rest.git.getRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `refs/tags/${tagName}`
-            })
-            console.log(`Tag ${tagName} already exists, skipping tag creation`)
-            return
-          } catch (e) {
-            if (e.status !== 404) {
-              throw e
-            }
-            // Tag doesn't exist (404), so we can create it
-            console.log(`Tag ${tagName} does not exist, creating it`)
-          }
-          
-          // Get the current commit SHA
-          const { data: refData } = await github.rest.git.getRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: 'heads/main'
-          });
-          
-          // Create the tag
-          await github.rest.git.createRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: `refs/tags/${tagName}`,
-            sha: refData.object.sha
-          });
-          
-          console.log(`Created tag ${tagName}`)
-          
-    - name: Build solution
-      run: dotnet build src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.CI.csproj -c Release
-      
-    - name: Pack NuGet package
-      if: ${{ github.event.inputs.publish == 'true' }}
-      run: dotnet pack src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.CI.csproj -c Release --no-build -o ./nupkg
-      
-    - name: List files in nupkg directory
-      if: ${{ github.event.inputs.publish == 'true' }}
-      run: ls ./nupkg
-      
+        name: nuget-package-v${{ steps.extract_version.outputs.VERSION }}
+        path: ./artifacts/*.nupkg
+        
     - name: Publish to NuGet
-      if: ${{ github.event.inputs.publish == 'true' }}
-      run: |
-        dotnet nuget push ./nupkg/Aind.Ni.DigitalOutput.Configuration.${{ steps.get_version.outputs.version }}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      if: ${{ inputs.publish_to_nuget == true }}
+      run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      
+    - name: Create GitHub Release
+      if: ${{ inputs.publish_to_nuget == true }}
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ steps.extract_version.outputs.VERSION }}
+        release_name: Release v${{ steps.extract_version.outputs.VERSION }}
+        body: |
+          ## Changes in v${{ steps.extract_version.outputs.VERSION }}
+          
+          - Automated release from GitHub Actions
+          - Package published to NuGet.org
+          
+          ## Installation
+          ```
+          Install-Package Aind.Ni.DigitalOutput.Configuration -Version ${{ steps.extract_version.outputs.VERSION }}
+          ```
+        draft: false
+        prerelease: false
