--- a/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
+++ b/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
@@ -1,32 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Title>Aind.Ni.DigitalOutput.Configuration</Title>
-    <Description>Bonsai Library for configuring NI-DAQmx Digital Output Channels externally from workflows.</Description>
-    <PackageTags>Bonsai;NI-DAQmx;Digital Output;Configuration;Allen Institute;AIND</PackageTags>
     <TargetFramework>net472</TargetFramework>
-    <Version>1.2.0</Version>
-    <Authors>Allen Institute for Neural Dynamics</Authors>
-    <Company>Allen Institute for Neural Dynamics</Company>
-    <AssemblyName>Aind.Ni.DigitalOutput.Configuration</AssemblyName>
-    <RootNamespace>Aind.Ni.DigitalOutput.Configuration</RootNamespace>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <AssemblyTitle>Aind.Ni.DigitalOutput.Configuration</AssemblyTitle>
+    <AssemblyDescription>A Bonsai library for configurable NI-DAQmx Digital Output with external channel configuration support.</AssemblyDescription>
+    <AssemblyCompany>Allen Institute for Neural Dynamics</AssemblyCompany>
+    <AssemblyProduct>Aind.Ni.DigitalOutput.Configuration</AssemblyProduct>
+    <Copyright>Copyright © Allen Institute for Neural Dynamics 2024</Copyright>
+    <Version>1.4.0</Version>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+    <FileVersion>1.4.0.0</FileVersion>
+    
+    <!-- NuGet Package Metadata -->
     <PackageId>Aind.Ni.DigitalOutput.Configuration</PackageId>
-    <RepositoryUrl>https://github.com/AllenNeuralDynamics/aind-ni-digitaloutput-configuration</RepositoryUrl>
+    <PackageDescription>A Bonsai library that provides configurable NI-DAQmx Digital Output functionality with external channel configuration support. Enables runtime channel configuration and more flexible digital output workflows.</PackageDescription>
+    <PackageTags>bonsai;daqmx;ni;digital-output;configuration;hardware;automation</PackageTags>
     <PackageProjectUrl>https://github.com/AllenNeuralDynamics/aind-ni-digitaloutput-configuration</PackageProjectUrl>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/AllenNeuralDynamics/aind-ni-digitaloutput-configuration</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    
+    <!-- CI Build Support -->
+    <DefineConstants Condition="'$(CI_BUILD)' == 'true'">CI_BUILD</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../../README.md" Pack="true" PackagePath="/"/>
-    <PackageReference Include="Bonsai.Core" Version="2.9.0" />
-    <ProjectReference Include="/Users/jerome.lecoq/Documents/Work documents/Allen Institute/Projects/PredictiveProcessingCommunity/bonsai_extension/daqmx/src/Bonsai.DAQmx/Bonsai.DAQmx.csproj" />
-    <Reference Include="NationalInstruments.Common">
-      <HintPath>/Users/jerome.lecoq/Documents/Work documents/Allen Institute/Projects/PredictiveProcessingCommunity/bonsai_extension/daqmx/src/Externals/DAQmx/NationalInstruments.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="NationalInstruments.DAQmx">
-      <HintPath>/Users/jerome.lecoq/Documents/Work documents/Allen Institute/Projects/PredictiveProcessingCommunity/bonsai_extension/daqmx/src/Externals/DAQmx/x64/NationalInstruments.DAQmx.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Bonsai.Core" Version="2.8.5" />
+    <PackageReference Include="Bonsai.DAQmx" Version="0.4.0" />
+    <PackageReference Include="OpenCV.Net" Version="3.4.1" />
+    <PackageReference Include="Rx-Linq" Version="2.2.5" />
   </ItemGroup>
+
 </Project>
