Include README.md in NuGet package
- Add PackageReadmeFile property to project file
- Include README.md in package to follow NuGet best practices
- Resolves NuGet warning about missing package readme

--- a/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
+++ b/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
@@ -22,6 +22,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,6 +30,10 @@
     <PackageReference Include="Bonsai.DAQmx" Version="0.4.0" />
     <PackageReference Include="OpenCV.Net" Version="3.4.1" />
     <PackageReference Include="Rx-Linq" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
