--- a/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
+++ b/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
@@ -31,9 +31,7 @@
     <PackageReference Include="Bonsai.Core" Version="2.7.0" />
     <PackageReference Include="OpenCV.Net" Version="3.4.1" />
     <PackageReference Include="Rx-Linq" Version="2.2.5" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\daqmx\src\Bonsai.DAQmx\Bonsai.DAQmx.csproj" />
+    <PackageReference Include="Bonsai.DAQmx" Version="0.3.0" />
   </ItemGroup>
 
   <ItemGroup>
