--- a/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
+++ b/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
@@ -8,15 +8,15 @@
     <AssemblyCompany>Allen Institute for Neural Dynamics</AssemblyCompany>
     <AssemblyProduct>Aind.Ni.DigitalOutput.Configuration</AssemblyProduct>
     <Copyright>Copyright © Allen Institute for Neural Dynamics 2024</Copyright>
-    <Version>1.8.2</Version>
-    <AssemblyVersion>1.8.2.0</AssemblyVersion>
-    <FileVersion>1.8.2.0</FileVersion>
-    
+    <Version>1.8.3</Version>
+    <AssemblyVersion>1.8.3.0</AssemblyVersion>
+    <FileVersion>1.8.3.0</FileVersion>
+    <Description>A Bonsai library that provides configurable NI-DAQmx Digital Output functionality with external channel configuration support. Enables runtime channel configuration and more flexible digital output workflows. Uses Bonsai.DAQmx for DAQmx assembly dependencies.</Description>
     <!-- NuGet Package Metadata -->
     <PackageId>Aind.Ni.DigitalOutput.Configuration</PackageId>
     <PackageDescription>A Bonsai library that provides configurable NI-DAQmx Digital Output functionality with external channel configuration support. Enables runtime channel configuration and more flexible digital output workflows. Uses Bonsai.DAQmx for DAQmx assembly dependencies.</PackageDescription>
     <Title>Aind.Ni.DigitalOutput.Configuration</Title>
-    <Authors>Allen Institute for Neural Dynamics</Authors>
+    <Authors>Jerome Lecoq</Authors>
     <PackageProjectUrl>https://github.com/AllenNeuralDynamics/aind-ni-digitaloutput-configuration</PackageProjectUrl>
     <RepositoryUrl>https://github.com/AllenNeuralDynamics/aind-ni-digitaloutput-configuration</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -25,9 +25,8 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <!-- <PackageIcon>icon.png</PackageIcon> -->
-    <PackageTags>bonsai;daqmx;ni;digital-output;configuration;hardware;automation;Allen Institute;AIND;neuroscience</PackageTags>
-    <PackageType>BonsaiLibrary</PackageType>
-    <PackageType>Dependency</PackageType>
+    <PackageTags>bonsai daqmx ni digital-output configuration</PackageTags>
+    <PackageType>Dependency;BonsaiLibrary</PackageType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(CI)' == 'true' ">
     <DefineConstants>CI_BUILD</DefineConstants>
