--- a/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
+++ b/src/Aind.Ni.DigitalOutput.Configuration/Aind.Ni.DigitalOutput.Configuration.csproj
@@ -4,7 +4,10 @@
     <Description>A Bonsai library for configurable NI-DAQmx Digital Output with external channel configuration support.</Description>
     <PackageTags>bonsai;daqmx;ni;digitaloutput;configuration</PackageTags>
     <TargetFramework>net472</TargetFramework>
-    <Version>1.8.14</Version>
+    <OutputPath>bin\x64\$(Configuration)\</OutputPath>
+    <Platform>x64</Platform>
+    <Version>1.8.15</Version>
+    <PlatformTarget>x64</PlatformTarget>
     <AssemblyName>Aind.Ni.DigitalOutput.Configuration</AssemblyName>
     <RootNamespace>Aind.Ni.DigitalOutput.Configuration</RootNamespace>
     <PackageId>Aind.Ni.DigitalOutput.Configuration</PackageId>
